{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 68,
  "lineage": "39623b1a-1fa0-40bf-f7a8-849ee27fdb42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e3c4a339a264cc9",
            "arn": "arn:aws:ec2:us-east-1:026915144064:instance/i-0f26148b8235f69de",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f26148b8235f69de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0648e171c8e30dea7",
            "private_dns": "ip-10-0-1-218.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.218",
            "public_dns": "ec2-54-224-27-58.compute-1.amazonaws.com",
            "public_ip": "54.224.27.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069a18b754922ff86",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07505cd3e9d376751",
            "tags": {
              "Name": "itKMITL-Server1",
              "itclass": "ipa24",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itKMITL-Server1",
              "itclass": "ipa24",
              "itgroup": "year3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087231931f42b99bd"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "aws_subnet.Public1",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e3c4a339a264cc9",
            "arn": "arn:aws:ec2:us-east-1:026915144064:instance/i-09e99e8102701fc0f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e99e8102701fc0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-031c69d36742aabb7",
            "private_dns": "ip-10-0-1-92.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-98-83-152-155.compute-1.amazonaws.com",
            "public_ip": "98.83.152.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb451e1187302b61",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07505cd3e9d376751",
            "tags": {
              "Name": "itKMITL-Server2",
              "itclass": "ipa24",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itKMITL-Server2",
              "itclass": "ipa24",
              "itgroup": "year3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087231931f42b99bd"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "aws_subnet.Public1",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testIgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026915144064:internet-gateway/igw-03c846146ed17b7b0",
            "id": "igw-03c846146ed17b7b0",
            "owner_id": "026915144064",
            "tags": {
              "Name": "itKMITL-Igw"
            },
            "tags_all": {
              "Name": "itKMITL-Igw"
            },
            "vpc_id": "vpc-0e6e4f71ac98668e8"
          },
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026915144064:targetgroup/elb-tg/7451dc0f736a971e",
            "arn_suffix": "targetgroup/elb-tg/7451dc0f736a971e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026915144064:targetgroup/elb-tg/7451dc0f736a971e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "elb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "itKMITL-elb-tg"
            },
            "tags_all": {
              "Name": "itKMITL-elb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e6e4f71ac98668e8"
          },
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment-server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:026915144064:targetgroup/elb-tg/7451dc0f736a971e-20241023084919372300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026915144064:targetgroup/elb-tg/7451dc0f736a971e",
            "target_id": "i-0f26148b8235f69de"
          },
          "dependencies": [
            "aws_instance.Server1",
            "aws_lb_target_group.target_group",
            "aws_security_group.allow_ssh_web",
            "aws_subnet.Public1",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment-server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:026915144064:targetgroup/elb-tg/7451dc0f736a971e-20241023084919473400000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026915144064:targetgroup/elb-tg/7451dc0f736a971e",
            "target_id": "i-09e99e8102701fc0f"
          },
          "dependencies": [
            "aws_instance.Server2",
            "aws_lb_target_group.target_group",
            "aws_security_group.allow_ssh_web",
            "aws_subnet.Public1",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026915144064:route-table/rtb-0bc5a4b0c6e60cb2f",
            "id": "rtb-0bc5a4b0c6e60cb2f",
            "owner_id": "026915144064",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c846146ed17b7b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "itKMITL-publicRoute"
            },
            "tags_all": {
              "Name": "itKMITL-publicRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6e4f71ac98668e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testIgw",
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0584f282d1e3d83b7",
            "route_table_id": "rtb-0bc5a4b0c6e60cb2f",
            "subnet_id": "subnet-07505cd3e9d376751"
          },
          "dependencies": [
            "aws_internet_gateway.testIgw",
            "aws_route_table.publicRoute",
            "aws_subnet.Public1",
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026915144064:security-group/sg-087231931f42b99bd",
            "description": "Allow ssh and web access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087231931f42b99bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "npaWk11_demo",
            "name_prefix": "",
            "owner_id": "026915144064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itKMITL-SG"
            },
            "tags_all": {
              "Name": "itKMITL-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6e4f71ac98668e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026915144064:subnet/subnet-07505cd3e9d376751",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07505cd3e9d376751",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026915144064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itKMITL-Public1"
            },
            "tags_all": {
              "Name": "itKMITL-Public1"
            },
            "vpc_id": "vpc-0e6e4f71ac98668e8"
          },
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026915144064:subnet/subnet-04e3a99fb21479837",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e3a99fb21479837",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026915144064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itKMITL-Public2"
            },
            "tags_all": {
              "Name": "itKMITL-Public2"
            },
            "vpc_id": "vpc-0e6e4f71ac98668e8"
          },
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026915144064:vpc/vpc-0e6e4f71ac98668e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07abef2c514b8f132",
            "default_route_table_id": "rtb-032e17ec63f1a163d",
            "default_security_group_id": "sg-0f75b050cb32eb261",
            "dhcp_options_id": "dopt-05ef2c34a25896991",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e6e4f71ac98668e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032e17ec63f1a163d",
            "owner_id": "026915144064",
            "tags": {
              "Name": "itKMITL-VPC"
            },
            "tags_all": {
              "Name": "itKMITL-VPC"
            }
          }
        }
      ]
    }
  ]
}